# agentic_graysky

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_README.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  conftest.py  docker-compose.yml  entrypoint.sh  fly.toml  fly.toml.example  health_check.py  litefs.yml  main.py  pyproject.toml  requirements.txt  run_tests.py  showcase.py  sync_ignore_files.py  tests.py  utils.py
.github/workflows/: fly.yml
api/: router.py
api/endpoints/: about.py  articles.py  feedback.py  home.py  projects.py  welcome_book.py
data/content/articles/: example-article.md
data/content/projects/: example-project.md
database/: README.md  __init__.py  connection.py  demo.py  feedback_db.py  init_db.py  migration.py  model.py  run_tests.py  schema.py  test_litefs.py  visitor_db.py
database/tests/: __init__.py  test_database.py
models/: content.py  visitor.py
scripts/: health_check.py
services/: content_service.py  feedback_service.py  visitor_service.py
tests/: README.md  __init__.py  run_tests.py
tests/health/: __init__.py  test_deployment.py
tests/integration/: __init__.py  test_api_live.py  test_database.py
tests/unit/: __init__.py
